diagnostic tool starter